team essentials and bold to italics

--- a/src/pages/basics/data.mdx
+++ b/src/pages/basics/data.mdx
@@ -12,7 +12,7 @@ title: "Data"
 
 ## What is data?
 
-**Data is the fuel that powers artificial intelligence.** Despite being critical to the AI equation, data often gets overlooked or minimized—often at enormous costs. It takes hard work to get data to the point where it’s usable for AI, but ultimately it comes down to hitting two big checkboxes: quantity and quality.
+*Data is the fuel that powers artificial intelligence.* Despite being critical to the AI equation, data often gets overlooked or minimized—often at enormous costs. It takes hard work to get data to the point where it’s usable for AI, but ultimately it comes down to hitting two big checkboxes: quantity and quality.
 
 Before taking the AI plunge, you need to have the right data and enough of it. This includes acquiring data, cleaning it, filling in the gaps, and in a majority of cases taking additional steps to render it useful. Those familiar with [Rob Thomas' AI Ladder](https://video.cube365.net/c/910697) will note that this takes place in the "Collect" and "Organize" steps.
 
