--- a/src/pages/fundamentals/index.mdx
+++ b/src/pages/fundamentals/index.mdx
@@ -39,9 +39,9 @@ As a result, this changes the nature of our design considerations, some of which
 
 ## AI Design Foundations
 
-As Jared Spool says, **design is the rendering of intent.** This intent drives our outcomes. It’s the “why” behind what we do and the cause for us to affect change. Intentions require us to identify purposes and values for our efforts. Outcomes require going beyond ideas and create meaningful, trusted solutions for the people we serve.
+As Jared Spool says, *design is the rendering of intent.* This intent drives our outcomes. It’s the “why” behind what we do and the cause for us to affect change. Intentions require us to identify purposes and values for our efforts. Outcomes require going beyond ideas and create meaningful, trusted solutions for the people we serve.
 
-Design is more than a job or role—it’s an essential part of what makes us human. **The value of design is to improve lives and leave the world better than we found it.** When designing for AI, our core intents are always rendered through the following lenses:
+Design is more than a job or role—it’s an essential part of what makes us human. *The value of design is to improve lives and leave the world better than we found it.* When designing for AI, our core intents are always rendered through the following lenses:
 
 <Row>
 <Column colLg={4}>
@@ -70,7 +70,7 @@ The willingness of a user to invest in an emotional bond with the system. This t
 
 
 ## Characteristics of AI
-AI is the simulation of human thought processes in a computerized model. AI involves self-learning systems that use data mining, pattern recognition and natural language processing to **mimic the way the human brain works.**
+AI is the simulation of human thought processes in a computerized model. AI involves self-learning systems that use data mining, pattern recognition and natural language processing to *mimic the way the human brain works.*
 
 These systems learn at scale, reason with purpose and interact with humans naturally. What search is to information retrieval, AI is to better, more-informed decision-making. In short, they help human experts make better decisions. We characterize AI as having four main qualities:
 
@@ -94,7 +94,7 @@ AI reasons towards specific goals. It has the ability to form hypotheses by maki
 <Column colLg={4}>
 
 #### Learns
-AI learns continuously through experience. In ingests and accumulates data and insight from every interaction at all times. **It is trained, not programmed**, by experts who enhance, scale and accelerate their expertise. Therefore, these systems get better over time.
+AI learns continuously through experience. In ingests and accumulates data and insight from every interaction at all times. *It is trained, not programmed*, by experts who enhance, scale and accelerate their expertise. Therefore, these systems get better over time.
 
 </Column>
 
@@ -112,7 +112,7 @@ When it comes to designing for AI, our focus must be unwavering in providing exp
 
 AI isn’t about data, it’s about insights. Data is the fuel for the car, insights are the destinations. This is what people care about.
 
-AI is capable of delivering more human-like interactions with people — based on the mode, form, and quality each person prefers. It reasons through the sum total of structured and unstructured data to find what really matters but this isn’t the full picture. **Our solutions must primarily address user needs instead of being force-fit to accommodate technical capabilities or requirements.**
+AI is capable of delivering more human-like interactions with people — based on the mode, form, and quality each person prefers. It reasons through the sum total of structured and unstructured data to find what really matters but this isn’t the full picture. *Our solutions must primarily address user needs instead of being force-fit to accommodate technical capabilities or requirements.*
 
 <Row>
 <Column colLg={12}>
