--- a/src/pages/team-essentials/index.mdx
+++ b/src/pages/team-essentials/index.mdx
@@ -11,15 +11,6 @@ Teams need a diverse set of minds and skill sets to create something useful, int
 
 </PageDescription>
 
-<Row>
-<Column colMd={2} colMd={3} colLg={4}>
-<ResourceCard
-  href={'ibm.com'}
-  subTitle={'Activity'}
-  title={'AI Handbook'} />
-</Column>
-</Row>
-
 ## Apply design thinking to artificial intelligence.
 
 Teams need a diverse set of minds and skill sets to create something useful, intuitive, and responsible. Our course will give you the language, knowledge, and actionable methods to work alongside technical and non-technical members of your team to create AI solutions.
@@ -27,6 +18,53 @@ Teams need a diverse set of minds and skill sets to create something useful, int
 In this course, you’ll learn our AI Essentials Framework, work through a fictional case study to see how a team could use this framework, and collect resources that you can apply with your team immediately.
 
 You'll explore what it means to design artificial intelligence systems as a team, guided by a clear intent and a focus on people. This course will give you the framework and tools you need to recognize responsible AI design, align your team, and work with data sources to start building an AI solution today.
+
+<Row className={'photo-grid'}>
+<Column colMd={4} colLg={8}>
+<ImageCard
+href="/"
+aspectRatio="16:9"
+hoverColor="dark">
+
+![](../../images/team-essentials/Image_1.png)
+
+</ImageCard>
+</Column>
+
+<Column colMd={4} colLg={4}>
+<ImageCard
+aspectRatio="1:1"
+href="/"
+hoverColor="dark">
+
+![](../../images/team-essentials/Image_2.png)
+
+</ImageCard>
+</Column>
+
+<Column colMd={4} colLg={4}>
+<ImageCard
+aspectRatio="16:9"
+href="/"
+hoverColor="dark">
+
+![](../../images/team-essentials/Image_3.png)
+
+</ImageCard>
+</Column>
+
+<Column colMd={4} colLg={8}>
+<ImageCard
+aspectRatio="16:9"
+href="/"
+hoverColor="dark">
+
+![](../../images/team-essentials/Image_4.png)
+
+</ImageCard>
+</Column>
+</Row>
+
 
 ## AI Essentials Framework
 
@@ -40,11 +78,25 @@ The AI Essentials Framework is a specific grouping of activities to work through
  - **Reasoning**: Bring your ideas down to earth.
  - **Knowledge**: Brainstorm the direct and indirect effects of your AI.
 
+<Row>
+<Column colLg={12} >
 
-<Row className={'video-wrapper'}>
-<Column colSm={12} colMd={12} colLg={12}>
-
-<Video title="Test" vimeoId="235672083" />
+![](../../images/team-essentials/Image_5.png)
 
 </Column>
 </Row>
+
+## Apply design thinking to artificial intelligence.
+Throughout this course, you will learn the AI Essentials Framework from experts, see an example in practice, and gather the resources you need to practice on your own project.
+
+<FeatureCard
+  className={'feature-card'}
+  title="Enterprise Design Thinking for AI"
+  actionIcon="launch"
+  href="/"
+  color="dark"
+  >
+
+![demo image](../../images/team-essentials/Image_6.png)
+
+</FeatureCard>
