--- a/src/pages/fundamentals/index.mdx
+++ b/src/pages/fundamentals/index.mdx
@@ -195,7 +195,7 @@ Both parties are fully partnered through trust and mutual appreciation. The rela
 ![The Relationship Age](../../images/fundamentals/Image_3.png)
 
 <Caption fullWidth>
-  Needs a caption
+  Establishing a human/machine relationship
 </Caption>
 </Column>
 </Row>
@@ -208,9 +208,6 @@ So what do we need to consider when one person in a relationship is replaced by 
 
 ![AI is a symbiotic relationship](../../images/fundamentals/Image_4.png)
 
-<Caption fullWidth>
-  Needs a caption
-</Caption>
 </Column>
 </Row>
 
@@ -223,7 +220,7 @@ Artificial intelligences are probabilistic systems. This means that they are tau
 ![The Relationship Age](../../images/fundamentals/Image_5.png)
 
 <Caption fullWidth>
-  Needs a caption
+  AI ecosystem
 </Caption>
 </Column>
 </Row>
@@ -263,7 +260,7 @@ The external factors that will both inform and educate the system
 ![The AI/Human Context Model image](../../images/fundamentals/Image_6_mobile.png)
 
 <Caption fullWidth>
-  Needs a caption
+  AI/Human Context Model
 </Caption>
 </div>
 
@@ -272,7 +269,7 @@ The external factors that will both inform and educate the system
 ![The AI/Human Context Model image](../../images/fundamentals/Image_6.png)
 
 <Caption fullWidth>
-  Needs a caption
+  AI/Human Context Model
 </Caption>
 </div>
 
