--- a/src/pages/fundamentals/index.mdx
+++ b/src/pages/fundamentals/index.mdx
@@ -115,7 +115,7 @@ AI is capable of delivering more human-like interactions with people — based o
 <Row>
 <Column colLg={12}>
 
-![The Relationship Age](../../images/fundamentals/Image_1.png)
+![Four column chart. The first three are the Transaction Age, spanning from the 1950s until to 2000s. The last column is The Relationship Era, taking place from the 2000s until the 2020s](../../images/fundamentals/Image_1.png)
 
 <Caption fullWidth>
   MutualMarketing human dynamics overview. Builds on Debra M. Amidon’s ‘Evolution of Thought’
@@ -209,7 +209,7 @@ So what do we need to consider when one person in a relationship is replaced by 
 ![AI is a symbiotic relationship](../../images/fundamentals/Image_4.png)
 
 <Caption fullWidth>
-  Needs a caption
+  A human must initiate before the machine can augment the human
 </Caption>
 </Column>
 </Row>
