--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -15,10 +15,9 @@ export default HomepageTemplate;
       hoverColor="dark"
       titleColor="dark"
       actionIcon="arrowRight"
-      iconColor="dark"
-      >
+      iconColor="dark">
 
-![](../images/Fundamentals.svg)
+![Link to AI fundamentals with an illustration of Knapp's Relational Model](../images/Fundamentals.svg)
 
   </ImageCard>
   <ImageCard
@@ -28,10 +27,9 @@ export default HomepageTemplate;
     href="/basics"
     hoverColor="dark"
     titleColor="light"
-    actionIcon="arrowRight"
-    >
+    actionIcon="arrowRight">
 
-![](../images/Basics.svg)
+![Link to AI Basics with an assortment of shapes strewn about](../images/Basics.svg)
 
   </ImageCard>
 </Column>
@@ -43,10 +41,9 @@ export default HomepageTemplate;
       aspectRatio="1:1"
       hoverColor="dark"
       href="/ethics"
-      actionIcon="arrowRight"
-      >
+      actionIcon="arrowRight">
 
-![](../images/Ethics.svg)
+![Link to AI Ethics with an illustration of hotel employees and customers](../images/Ethics.svg)
 
 
   </ImageCard>
@@ -57,10 +54,9 @@ export default HomepageTemplate;
         aspectRatio="1:1"
         href="/conversation"
         actionIcon="arrowRight"
-        hoverColor="dark"
-      >
+        hoverColor="dark">
 
-![](../images/Conversation.svg)
+![Link to Conversation Design with chat bubbles](../images/Conversation.svg)
 
   </ImageCard>
 </Column>
@@ -72,10 +68,9 @@ export default HomepageTemplate;
       aspectRatio="1:2"
       href="/team-essentials"
       actionIcon="arrowRight"
-      hoverColor="dark"
-      >
+      hoverColor="dark">
 
-![](../images/Team-Essentials.svg)
+![Link to AI Team Essentials with the AI Essentials Framework](../images/Team-Essentials.svg)
 
   </ImageCard>
 </Column>
