--- a/src/pages/fundamentals/index.mdx
+++ b/src/pages/fundamentals/index.mdx
@@ -12,13 +12,12 @@ Artificial intelligence (AI) is a mystery and a wonder. It can help us solve hum
 
 <AnchorLinks>
   <AnchorLink>Introduction</AnchorLink>
-  <AnchorLink>AI Design Foundations</AnchorLink>
-  <AnchorLink>Purpose, Value, and Trust</AnchorLink>
-  <AnchorLink>Characteristics for AI</AnchorLink>
-  <AnchorLink>Design Factors or AI</AnchorLink>
-  <AnchorLink>AI Ecosystem</AnchorLink>
-  <AnchorLink>AI/Human Context Model</AnchorLink>
-  <AnchorLink>Questions for Your Team</AnchorLink>
+  <AnchorLink>AI design foundations</AnchorLink>
+  <AnchorLink>Characteristics of AI</AnchorLink>
+  <AnchorLink>Design factors for AI</AnchorLink>
+  <AnchorLink>Relationship development</AnchorLink>
+  <AnchorLink>AI ecosystem</AnchorLink>
+  <AnchorLink>AI/human context model</AnchorLink>
 </AnchorLinks>
 
 ## Introduction
@@ -105,7 +104,7 @@ AI interacts naturally with people and systems. The interaction model of an AI i
 </Row>
 
 
-## Design Factors for AI
+## Design factors for AI
 When it comes to designing for AI, our focus must be unwavering in providing experiences that put the user above all else.
 
 AI isn’t about data, it’s about insights. Data is the fuel for the car, insights are the destinations. This is what people care about.
@@ -130,7 +129,7 @@ For AI to truly amplify humanity we _must_ have and maintain meaningful relation
 
 To design authentic AI-based relationships requires us, as designers, to consciously understand ourselves before anything else. The more we understand of ourselves, the better we will be able to teach machines how to help our users be better.
 
-### Knapp's Relational Development Model
+### Relationship development
 At this point, you might be asking yourself, “how do I design a relationship?” You wouldn’t be alone in this. For most people, forming and maintaining relationships is an autonomic process. We hardly give it a second thought.If you take a deeper look at the psychology behind relationships, you’ll probably find Knapp's Relational Development Model.
 
 [Mark Knapp](https://commstudies.utexas.edu/faculty/mark-knapp) is a teaching professor at the University of Texas and is known for his works in nonverbal communication research. His relationship model explains how relationships grow and last and also how they end. This model is categorized into ten different stages which come under two interrelating stages “coming together” and “coming apart.” This helps to understand how a relationship progresses and deteriorates. For the purposes of our work with AI, we will focus on the “coming together” stages exclusively.
@@ -211,7 +210,7 @@ So what do we need to consider when one person in a relationship is replaced by 
 </Column>
 </Row>
 
-### AI Ecosystem
+### AI ecosystem
 Artificial intelligences are probabilistic systems. This means that they are taught instead of being programmed. Since they are being taught, they must have context to be able to utilize their learnings. An AI needs this context to understand its place and provide value.
 
 <Row>
@@ -250,7 +249,7 @@ The external factors that will both inform and educate the system
 </Row>
 
 
-### AI/Human Context Model
+### AI/human context model
 
 <Row>
 <Column colLg={12}>
