--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -39,9 +39,11 @@ export default HomepageTemplate;
       className="card"
       title="Ethics"
       aspectRatio="1:1"
-      hoverColor="dark"
       href="/ethics"
-      actionIcon="arrowRight">
+      hoverColor="dark"
+      titleColor="dark"
+      actionIcon="arrowRight"
+      iconColor="dark">
 
 ![Link to AI Ethics with an illustration of hotel employees and customers](../images/Ethics.svg)
 
