naming and homepage tiles

--- a/src/pages/ethics/everyday-ethics.mdx
+++ b/src/pages/ethics/everyday-ethics.mdx
@@ -24,12 +24,12 @@ Artificial intelligence is rapidly growing in capability, impact and influence. 
 AI systems must remain flexible enough to undergo constant maintenance and improvement as ethical challenges are discovered and remediated. By adopting and practicing the five focal areas covered here, designers and developers can become more ethically aware, mitigate biases within these systems, and instill responsibility and accountability in those who work with AI. Constant improvement and assessment is key to ensuring that design and development teams address users’ concerns.
 </Column>
 
-<Column colLg={3} offsetLg={1} noGutterSm>
+<Column colLg={3} offsetLg={1}>
 <Aside>
 
 **Stay up to date**
 
-We're always updating our ethics guide to reflect our feedback from users and teams. Find the most [current version here](https://ibm.biz/everydayethics).
+We're always updating our ethics content to reflect our feedback from users and teams. Find this version in [pdf form here](https://ibm.biz/everydayethics).
 
 
 </Aside>
