--- a/src/pages/basics/ml.mdx
+++ b/src/pages/basics/ml.mdx
@@ -31,15 +31,12 @@ AIs are taught, not explicitly programmed. In other words, instead of spelling o
 
 ![ML uses examples not rules](../../images/basics/ml/Image_5.png)
 
-<Caption fullWidth>
-  Needs a caption
-</Caption>
 </Column>
 </Row>
 
 ## How does machine learning work?
 
-There are a few distinct ways that machines can learn. In most cases, it'll fall under one of three buckets: supervised learning, unsupervised learning, and reinforcement learning. 
+There are a few distinct ways that machines can learn. In most cases, it'll fall under one of three buckets: *supervised learning*, *unsupervised learning*, and *reinforcement learning*. 
 
 Remember that we as humans also have discrete learning styles. Sometimes we learn by watching videos and reading books; other times we acquire knowledge based on hearing it in context. There are also learning certain tasks that require a specific learning style. For example, we can always read about baseball, but if we want to hit a ball, there's no amount of reading that can substitute practicing swinging a bat. This separation in learning styles is the basic idea behind the different branches of ML.
 
@@ -81,7 +78,7 @@ In a nutshell, supervised learning is about providing your AI with enough exampl
 #### Unsupervised learning
 Unsupervised learning finds commonalities and patterns in the input data on its own. By extension, it's also commonly used to find outliers and anomalies in a dataset. Most unsupervised learning focuses on clustering—that is, grouping the data by some set of characteristics or features. This is the same “features” mentioned in supervised learning, although unsupervised learning doesn't use labeled data.
 
-Let’s use the example again of the child and the shapes. Suppose again that you had a child group similar shapes together (Figure 3). The child will likely group, (or cluster), by shape, color, or size. This mode of learning is great for surfacing hidden connections or oddities in oceans of data.
+Let’s use the example again of the child and the shapes. Suppose again that you had a child group similar shapes together. The child will likely group, (or *cluster*), by shape, color, or size. This mode of learning is great for surfacing hidden connections or oddities in oceans of data.
 
 <Row>
 <Column colLg={12}>
@@ -105,9 +102,7 @@ The ingredients of a reinforcement learning problem are: 
 ML isn't magic; it's math. Statistics, probability, linear algebra, and algorithms are what bring ML to life.
 
 #### Deep learning and neural networks
-Deep learning (DL) is a subset of machine learning, therefore everything you just learned still applies. The motivation is still trying to predict an output given a set of inputs, and either supervised learning or unsupervised learning can be used. The key differences are performance and how it works. 
-
-For now, just know that deep learning is machine learning that uses a neural network with multiple hidden layers. If you want to even more, read [this] or watch [that].
+Deep learning (DL) is a subset of machine learning, therefore everything you just learned still applies. The motivation is still trying to predict an output given a set of inputs, and either supervised learning or unsupervised learning can be used. The key differences are performance and how it works. For now, just know that deep learning is machine learning that uses a neural network with multiple hidden layers.
 
 
 <Row>
