--- a/src/pages/basics/ai.mdx
+++ b/src/pages/basics/ai.mdx
@@ -14,7 +14,7 @@ Any system capable of simulating human intelligence and thought processes is sai
 
 Science fiction has done a fantastic job at warning us what's to come once machines are able to think as well as humans. Fortunately, the AIs often depicted in movies are far more advanced than what technology is capable of today (or any time soon, for that matter).
 
-While these aspirational systems — called artificial general intelligence — are far off, there's a lot of deserved buzz around artificial narrow intelligence, or weak AI. Narrow AI focuses on one, narrow task of human intelligence, and within it, there are two branches: rule-based AI and example based AI. The former involves giving the machine rules to follow while the latter giving it examples to learn from. 
+While these aspirational systems — called *artificial general intelligence* — are far off, there's a lot of deserved buzz around *artificial narrow intelligence*, or *weak AI*. Narrow AI focuses on one, narrow task of human intelligence, and within it, there are two branches: rule-based AI and example based AI. The former involves giving the machine rules to follow while the latter giving it examples to learn from. 
 
 AI takes many forms, like [machine learning](/basics/ml), computer vision, natural language processing, robotics, etc. Consequently, the term “AI” is increasingly used as shorthand to describe any machines that mimic our cognitive functions such as "learning" and "problem solving”.
 
@@ -53,7 +53,7 @@ Some of the most common tasks AI performs — and their corresponding subfields 
 It depends on several factors.  Each of AI tasks mentioned has its own unique implementation, but it can be boiled down to roughly two approaches: specifying the rules that solve the problem versus giving the machine examples to find the pattern on its own.
 
 #### Rules based
-The rules-based approach uses algorithms — a sequence of unambiguous instructions used by computers to solve problems. It tells a computer precisely what steps to take to solve a problem or reach a goal. The chosen algorithm(s) determine how the AI will "think" about surfacing insights to address your problem space. Different algorithms have different goals, strengths, and weaknesses.  Choosing the right fit depends on your desired outcome and the
+The rules-based approach uses *algorithms* — a sequence of unambiguous instructions used by computers to solve problems. It tells a computer precisely what steps to take to solve a problem or reach a goal. The chosen algorithm(s) determine how the AI will "think" about surfacing insights to address your problem space. Different algorithms have different goals, strengths, and weaknesses.  Choosing the right fit depends on your desired outcome and the nuances of the process.
 
 <div class='hide-on-small'>
 
@@ -63,7 +63,7 @@ The rules-based approach uses algorithms — a sequence of unambiguous instructi
 ![AI](../../images/basics/ai/Image_1.png)
 
 <Caption fullWidth>
-  Needs a caption
+  Algorithm for repairing a broken lamp
 </Caption>
 </Column>
 </Row>
@@ -75,18 +75,18 @@ The rules-based approach uses algorithms — a sequence of unambiguous instructi
 ![AI](../../images/basics/ai/Image_1_mobile.png)
 
 <Caption fullWidth>
-  Needs a caption
+  Algorithm for troubleshooting a non-functioning lamp
 </Caption>
 </div>
 
 #### Examples based
-The examples-based approach uses data to create models. 
+The examples-based approach uses data to create *models*. 
 
-This data can take many forms: music, videos, weather conditions, user profiles, system logs, etc. Models are the result of training an AI on data to find patterns. This is akin to you studying before a big exam — you started with little to no understanding, so you ingested a bunch of study material so that you could go out into the world ready to apply your new knowledge. This way of problem solving is largely made possible by its subfield, machine learning. 
+This data can take many forms: music, videos, weather conditions, user profiles, system logs, etc. *Models* are the result of training an AI on data to find patterns. This is akin to you studying before a big exam — you started with little to no understanding, so you ingested a bunch of study material so that you could go out into the world ready to apply your new knowledge. This way of problem solving is largely made possible by its subfield, machine learning. 
 
 This is helpful in cases where specifying rigid rules (i.e. writing algorithms) is hard or abundant e.g. in stock trading, identifying cancer, predicting which video a user wants to see next, etc. 
 
-Some helpful people at MIT created a flowchart that guides you through whether or not the thing you're looking at is, in fact, AI. You can find it here.
+Some helpful people at MIT [created a flowchart](https://www.technologyreview.com/s/612404/is-this-ai-we-drew-you-a-flowchart-to-work-it-out/) that guides you through whether or not the thing you're looking at is, in fact, AI.
 
 ## See for yourself
  - [Watson Assistant](https://www.ibm.com/cloud/watson-assistant/)
