new assets and asides

--- a/src/pages/team-essentials/index.mdx
+++ b/src/pages/team-essentials/index.mdx
@@ -23,8 +23,7 @@ You'll explore what it means to design artificial intelligence systems as a team
 <Column colMd={5} colLg={8}>
 <ImageCard
 href="/"
-aspectRatio="16:9"
-hoverColor="dark">
+aspectRatio="16:9">
 
 ![](../../images/team-essentials/Image_1.png)
 
@@ -34,8 +33,7 @@ hoverColor="dark">
 <Column colMd={3} colLg={4}>
 <ImageCard
 aspectRatio="1:1"
-href="/"
-hoverColor="dark">
+href="/">
 
 ![](../../images/team-essentials/Image_2.png)
 
@@ -45,8 +43,7 @@ hoverColor="dark">
 <Column colMd={3} colLg={4}>
 <ImageCard
 aspectRatio="16:9"
-href="/"
-hoverColor="dark">
+href="/">
 
 ![](../../images/team-essentials/Image_3.png)
 
@@ -56,8 +53,7 @@ hoverColor="dark">
 <Column colMd={5} colLg={8}>
 <ImageCard
 aspectRatio="16:9"
-href="/"
-hoverColor="dark">
+href="/">
 
 ![](../../images/team-essentials/Image_4.png)
 
