conversation design to conversation planning; fixed a typo on ai and ml

--- a/src/pages/basics/ai.mdx
+++ b/src/pages/basics/ai.mdx
@@ -20,7 +20,7 @@ AI takes many forms, like [machine learning](/basics/ml), computer vision, natur
 
 The safest working definition is the study of making systems capable of simulating human intelligence and thought processes, which comes in many forms.
 
-_Note: This guide makes comparisons to human intelligence to make it easier to understand the basic concepts of machine cognition. Organic thought is obviously different from artificial thought, both technically and philosophically, but philosophy is not the purpose of this document. Our goal is to equip provide the most digestible practical explanation of AI._
+_Note: This guide makes comparisons to human intelligence to make it easier to understand the basic concepts of machine cognition. Organic thought is obviously different from artificial thought, both technically and philosophically, but philosophy is not the purpose of this document. Our goal is to provide the most digestible and practical explanation of AI._
 
 ## Why use AI?
 
