--- a/src/pages/basics/ml.mdx
+++ b/src/pages/basics/ml.mdx
@@ -18,7 +18,7 @@ Of course not! At the beginning of our lives, we have little understanding of th
 
 AI learns in a similar way. When it’s first created, an AI knows nothing; ML gives AI the ability to learn about its world.
 
-_Note: This guide makes comparisons to human intelligence to make it easier to understand the basic concepts of machine cognition. Organic thought is obviously different from artificial thought, both technically and philosophically, but philosophy is not the purpose of this document. Our goal is to equip provide the most digestible practical explanation of AI._
+_Note: This guide makes comparisons to human intelligence to make it easier to understand the basic concepts of machine cognition. Organic thought is obviously different from artificial thought, both technically and philosophically, but philosophy is not the purpose of this document. Our goal is to provide the most digestible and practical explanation of AI._
 
 ## Why use machine learning?
 
