fundamentals copy change

--- a/src/pages/fundamentals/index.mdx
+++ b/src/pages/fundamentals/index.mdx
@@ -200,7 +200,7 @@ Both parties are fully partnered through trust and mutual appreciation. The rela
 </Row>
 
 ### A symbiotic relationship
-So what do we need to consider when one person in a relationship is replaced by a machine? By establishing tone and personality first, the system will have the means to endear itself to the user. As these systems are like “digital toddlers,” the means to make an emotional connection with its users will be essential. No one knows what it’s really like to have a full emotional bond with an AI outside of movies or books. This is something for us all to aspire to.
+So what do we need to consider when one person in a relationship is replaced by a machine? By establishing tone and personality first, the system will have the means to endear itself to the user. As these systems are like “digital toddlers,” the means to make an emotional connection with its users will be essential.
 
 <Row>
 <Column colLg={6}>
