update and bugfixes

--- a/src/pages/basics/ai.mdx
+++ b/src/pages/basics/ai.mdx
@@ -52,7 +52,7 @@ Some of the most common tasks AI performs — and their corresponding subfields 
 ## How does AI work?
 It depends on several factors.  Each of AI tasks mentioned has its own unique implementation, but it can be boiled down to roughly two approaches: specifying the rules that solve the problem versus giving the machine examples to find the pattern on its own.
 
-#### Rules based
+#### Rules-based
 The rules-based approach uses *algorithms* — a sequence of unambiguous instructions used by computers to solve problems. It tells a computer precisely what steps to take to solve a problem or reach a goal. The chosen algorithm(s) determine how the AI will "think" about surfacing insights to address your problem space. Different algorithms have different goals, strengths, and weaknesses.  Choosing the right fit depends on your desired outcome and the nuances of the process.
 
 <div class='hide-on-small'>
