--- a/src/pages/ethics/everyday-ethics.mdx
+++ b/src/pages/ethics/everyday-ethics.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Everyday Ethics for AI"
+title: "Everyday ethics for AI"
 ---
 
 import './ethics.scss';
@@ -12,12 +12,13 @@ import './ethics.scss';
 
 ## Introduction
 
-#### Everyday Ethics for AI provides discussion points concerning:
-- specific virtues that AI systems should possess;
-- guidance for designers and developers training and building AI.
-
 <Row>
 <Column colLg={8}>
+
+#### Everyday ethics for AI provides discussion points concerning:
+
+- specific virtues that AI systems should possess;
+- guidance for designers and developers training and building AI.
 
 Artificial intelligence is rapidly growing in capability, impact and influence. As designers and developers of AI systems, it is an imperative to understand the ethical considerations of our work. A tech-centric focus that solely revolves around improving the capabilities of an intelligent system doesn't sufficiently consider human needs.
 
