--- a/src/pages/ethics/resources.mdx
+++ b/src/pages/ethics/resources.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Ethics Resources"
+title: "Ethics resources"
 ---
 
 import { AnchorLinks, PageDescription, Video } from "gatsby-theme-carbon";
