--- a/src/pages/team-essentials/index.mdx
+++ b/src/pages/team-essentials/index.mdx
@@ -22,7 +22,7 @@ You'll explore what it means to design artificial intelligence systems as a team
 <Row className={'photo-grid'}>
 <Column colMd={5} colLg={8}>
 <ImageCard
-href="/"
+href="javascript:;"
 aspectRatio="16:9">
 
 ![](../../images/team-essentials/Image_1.png)
@@ -33,7 +33,7 @@ aspectRatio="16:9">
 <Column colMd={3} colLg={4}>
 <ImageCard
 aspectRatio="1:1"
-href="/">
+href="javascript:;">
 
 ![](../../images/team-essentials/Image_2.png)
 
@@ -43,7 +43,7 @@ href="/">
 <Column colMd={3} colLg={4}>
 <ImageCard
 aspectRatio="16:9"
-href="/">
+href="javascript:;">
 
 ![](../../images/team-essentials/Image_3.png)
 
@@ -53,7 +53,7 @@ href="/">
 <Column colMd={5} colLg={8}>
 <ImageCard
 aspectRatio="16:9"
-href="/">
+href="javascript:;">
 
 ![](../../images/team-essentials/Image_4.png)
 
