global search and description

--- a/src/pages/basics/ai.mdx
+++ b/src/pages/basics/ai.mdx
@@ -1,5 +1,6 @@
 ---
-title: "Artificial Intelligence"
+title: "Artificial intelligence"
+description: the beginner's guide to understanding artificial intelligence
 ---
 
 <PageDescription>
