--- a/src/pages/ethics/accountability.mdx
+++ b/src/pages/ethics/accountability.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Accountability"
+description: first ethical focal area of AI design
 ---
 
 import { Aside, Column, Row } from "gatsby-theme-carbon";
