--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -10,7 +10,7 @@ export default HomepageTemplate;
     <ImageCard
       className="card"
       title="Fundamentals"
-      href="/fundamentals"
+      href="/fundamentals/"
       aspectRatio="1:1"
       hoverColor="dark"
       titleColor="dark"
@@ -24,7 +24,7 @@ export default HomepageTemplate;
     className="card"
     title="Basics"
     aspectRatio="1:1"
-    href="/basics/ai"
+    href="/basics/ai/"
     hoverColor="dark"
     titleColor="light"
     actionIcon="arrowRight">
@@ -39,7 +39,7 @@ export default HomepageTemplate;
       className="card"
       title="Ethics"
       aspectRatio="1:1"
-      href="/ethics"
+      href="/ethics/"
       hoverColor="dark"
       titleColor="dark"
       actionIcon="arrowRight"
@@ -54,7 +54,7 @@ export default HomepageTemplate;
         title="Conversation"
         titleColor="light"
         aspectRatio="1:1"
-        href="/conversation"
+        href="/conversation/"
         actionIcon="arrowRight"
         hoverColor="dark">
 
@@ -68,7 +68,7 @@ export default HomepageTemplate;
       className="card"
       title="Team Essentials"
       aspectRatio="1:2"
-      href="/team-essentials"
+      href="/team-essentials/"
       actionIcon="arrowRight"
       hoverColor="dark">
 
@@ -85,7 +85,7 @@ export default HomepageTemplate;
     <ImageCard
       className="card"
       title="Fundamentals"
-      href="/fundamentals"
+      href="/fundamentals/"
       aspectRatio="1:1"
       hoverColor="dark"
       titleColor="dark"
@@ -100,7 +100,7 @@ export default HomepageTemplate;
     className="card"
     title="Team Essentials"
     aspectRatio="1:2"
-    href="/team-essentials"
+    href="/team-essentials/"
     actionIcon="arrowRight"
     hoverColor="dark">
 
@@ -115,7 +115,7 @@ export default HomepageTemplate;
 className="card"
 title="Basics"
 aspectRatio="1:1"
-href="/basics/ai"
+href="/basics/ai/"
 hoverColor="dark"
 titleColor="light"
 actionIcon="arrowRight">
@@ -127,7 +127,7 @@ actionIcon="arrowRight">
       className="card"
       title="Ethics"
       aspectRatio="1:1"
-      href="/ethics"
+      href="/ethics/"
       hoverColor="dark"
       titleColor="dark"
       actionIcon="arrowRight"
@@ -142,7 +142,7 @@ actionIcon="arrowRight">
         title="Conversation"
         titleColor="light"
         aspectRatio="1:1"
-        href="/conversation"
+        href="/conversation/"
         actionIcon="arrowRight"
         hoverColor="dark">
 
