homepage vertical spacing

--- a/src/pages/basics/ai.mdx
+++ b/src/pages/basics/ai.mdx
@@ -42,7 +42,7 @@ AI is a powerful toolbox that has many applications in domains far and wide. The
  5. Scale expertise and learning
  6. Detect liabilities and mitigate risk
 
-Some of the most common tasks AI performs — and their corresponding subfields — include:
+Some of the most common tasks AI performs, and their corresponding subfields, include:
  - Extracting information from pictures (computer vision)
  - Transcribing or understanding spoken words (speech to text and natural language processing)
  - Pulling insights and patterns out of written text (natural language understanding)
