--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -12,7 +12,7 @@ export default HomepageTemplate;
       title="Fundamentals"
       href="/fundamentals/"
       aspectRatio="1:1"
-      hoverColor="dark"
+      hoverColor="light"
       titleColor="dark"
       actionIcon="arrowRight"
       iconColor="dark">
@@ -25,7 +25,7 @@ export default HomepageTemplate;
     title="Basics"
     aspectRatio="1:1"
     href="/basics/ai/"
-    hoverColor="dark"
+    hoverColor="light"
     titleColor="light"
     actionIcon="arrowRight">
 
@@ -40,7 +40,7 @@ export default HomepageTemplate;
       title="Ethics"
       aspectRatio="1:1"
       href="/ethics/"
-      hoverColor="dark"
+      hoverColor="light"
       titleColor="dark"
       actionIcon="arrowRight"
       iconColor="dark">
@@ -56,7 +56,7 @@ export default HomepageTemplate;
         aspectRatio="1:1"
         href="/conversation/"
         actionIcon="arrowRight"
-        hoverColor="dark">
+        hoverColor="light">
 
 ![Link to Conversation Design with chat bubbles](../images/Conversation.svg)
 
@@ -70,7 +70,7 @@ export default HomepageTemplate;
       aspectRatio="1:2"
       href="/team-essentials/"
       actionIcon="arrowRight"
-      hoverColor="dark">
+      hoverColor="light">
 
 ![Link to AI Team Essentials with the AI Essentials Framework](../images/Team-Essentials.svg)
 
@@ -87,7 +87,7 @@ export default HomepageTemplate;
       title="Fundamentals"
       href="/fundamentals/"
       aspectRatio="1:1"
-      hoverColor="dark"
+      hoverColor="light"
       titleColor="dark"
       actionIcon="arrowRight"
       iconColor="dark">
@@ -102,7 +102,7 @@ export default HomepageTemplate;
     aspectRatio="1:2"
     href="/team-essentials/"
     actionIcon="arrowRight"
-    hoverColor="dark">
+    hoverColor="light">
 
 ![Link to AI Team Essentials with the AI Essentials Framework](../images/Team-Essentials.svg)
 
@@ -116,7 +116,7 @@ className="card"
 title="Basics"
 aspectRatio="1:1"
 href="/basics/ai/"
-hoverColor="dark"
+hoverColor="light"
 titleColor="light"
 actionIcon="arrowRight">
 
@@ -128,7 +128,7 @@ actionIcon="arrowRight">
       title="Ethics"
       aspectRatio="1:1"
       href="/ethics/"
-      hoverColor="dark"
+      hoverColor="light"
       titleColor="dark"
       actionIcon="arrowRight"
       iconColor="dark">
@@ -144,7 +144,7 @@ actionIcon="arrowRight">
         aspectRatio="1:1"
         href="/conversation/"
         actionIcon="arrowRight"
-        hoverColor="dark">
+        hoverColor="light">
 
 ![Link to Conversation Design with chat bubbles](../images/Conversation.svg)
 
